# chanix

./: Cargo.toml  README.md
src/: aggregated_event.rs  aggregator.rs  consumer.rs  lib.rs  main.rs  pipeline.rs  producer.rs  producer_1.rs  producer_2.rs  producer_3.rs  types.rs
src/libs/: aggregator.rs  consumer.rs  pipeline.rs  types.rs
tests/: pipeline_tests.rs
tests/infra/: aggregated_event.rs  input_events.rs  mod.rs  producer_1.rs  producer_2.rs  producer_3.rs
